Rename Cargo to Kargo and add Turkish docs
Rename the project branding from "Cargo" to "Kargo" and provide Turkish localization for README and the docs site (docs/index.html). Update copy, keyboard shortcuts, and links (pointing to the new repo/releases), add/replace screenshot assets (add cargo_home.png, cargo_ddg.png, cargo_tabs.png; remove several platform-specific images), and tweak site HTML formatting. Also update package.json and multiple source files (src/*.html, src/index.js, pages, theme CSS, tld.js, view.js, pages utils, window.js) to reflect the rename/localization and related UI adjustments.

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cargo - About</title>
+    <title>Kargo - Hakkında</title>
     <style media="screen">
       body {
         margin: 0px;
@@ -50,85 +50,85 @@
         font-family: monospace;
       }
 
-      ::-moz-selection { background: yellow; }
-      ::selection { background: yellow; }
+      ::-moz-selection { background: #fcc41d; }
+      ::selection { background: #fcc41d; }
     </style>
   </head>
   <body>
     <main>
       <section class="inner">
-        <h1>🚂🚋🚋 Cargo</h1>
-        <p>A browser with almost no UI.</p>
-        <p>Cargo is a browser for people that live on the internet and hate mice. Cargo can be controlled using only a few keyboard shortcuts.</p>
-        <p>I built cargo since I spend a lot of time in the browser and do not find myself using most of the features. Cargo is built using <a href="https://electronjs.org">Electron</a> - a famework for building cross platform apps using HTML, CSS and Javascript - so Cargo is a browser built using web technology.</p>
-        <p>Thanks for using Cargo!</p>
+        <h1>🚂🚋🚋 Kargo</h1>
+        <p>Neredeyse hiç kullanıcı arayüzü (UI) olmayan bir tarayıcı.</p>
+        <p>Kargo, internette yaşayan ve fareden nefret eden insanlar için bir tarayıcıdır. Kargo, sadece birkaç klavye kısayolu kullanılarak kontrol edilebilir.</p>
+        <p>Kargo'yu geliştirdim çünkü tarayıcıda çok fazla vakit geçiriyorum ve çoğu özelliği kullanmadığımı fark ettim. Kargo; HTML, CSS ve Javascript kullanarak platformlar arası uygulamalar geliştirmeye yarayan bir framework olan <a href="https://electronjs.org">Electron</a> kullanılarak inşa edilmiştir - yani Kargo, web teknolojisiyle oluşturulmuş bir tarayıcıdır.</p>
+        <p>Kargo'yu kullandığınız için teşekkürler!</p>
       </section>
     </main>
 
     <main class="keyboard">
       <section class="inner">
-        <h1>Keyboard shortcuts</h1>
-        <p>Cargo is made to be used with a keyboard.</p>
+        <h1>Klavye Kısayolları</h1>
+        <p>Kargo, klavye ile kullanılmak üzere tasarlanmıştır.</p>
         <table>
           <tr>
             <td class="shortcut">alt</td>
-            <td>Open menu</td>
+            <td>Menüyü aç</td>
           </tr>
           <tr>
             <td class="shortcut">ctrl + enter</td>
-            <td>Add www. + .com</td>
+            <td>www. + .com ekle</td>
           </tr>
           <tr>
             <td class="shortcut">command + shift + d / ctrl + shift + d</td>
-            <td>Open devtools</td>
+            <td>Geliştirici araçlarını aç</td>
           </tr>
           <tr>
             <td class="shortcut">command + shift + a / ctrl + shift + a</td>
-            <td>Open about page</td>
+            <td>Hakkında sayfasını aç</td>
           </tr>
           <tr>
-            <td class="shortcut">command + left / ctrl + left</td>
-            <td>Navigate back</td>
+            <td class="shortcut">command + sol / ctrl + sol</td>
+            <td>Geri git</td>
           </tr>
           <tr>
-            <td class="shortcut">command + right / ctrl + right</td>
-            <td>Navigate forward</td>
+            <td class="shortcut">command + sağ / ctrl + sağ</td>
+            <td>İleri git</td>
           </tr>
           <tr>
             <td class="shortcut">command + r / ctrl + r / F5</td>
-            <td>Reload</td>
+            <td>Yenile</td>
           </tr>
           <tr>
             <td class="shortcut">command + shift + h / ctrl + shift + h</td>
-            <td>Navigate to home.cargo</td>
+            <td>home.kargo sayfasına git</td>
           </tr>
           <tr>
             <td class="shortcut">command + h / ctrl + h</td>
-            <td>Open history</td>
+            <td>Geçmişi aç</td>
           </tr>
           <tr>
             <td class="shortcut">command + t / ctrl + t</td>
-            <td>Open a new tab</td>
+            <td>Yeni sekme aç</td>
           </tr>
           <tr>
             <td class="shortcut">command + w / ctrl + w</td>
-            <td>Close current tab</td>
+            <td>Mevcut sekmeyi kapat</td>
           </tr>
           <tr>
-            <td class="shortcut">command + shift + left / ctrl + shift + left</td>
-            <td>Go to previous tab</td>
+            <td class="shortcut">command + shift + sol / ctrl + shift + sol</td>
+            <td>Önceki sekmeye git</td>
           </tr>
           <tr>
-            <td class="shortcut">command + shift + right / ctrl + shift + right</td>
-            <td>Go to next tab</td>
+            <td class="shortcut">command + shift + sağ / ctrl + shift + sağ</td>
+            <td>Sonraki sekmeye git</td>
           </tr>
           <tr>
             <td class="shortcut">command + 0 / ctrl + 0</td>
-            <td>Go to last tab</td>
+            <td>Son sekmeye git</td>
           </tr>
           <tr>
-            <td class="shortcut">command + [number from 1 to 9] / ctrl + [number from 1 to 9]</td>
-            <td>Go to n<i style="font-size: .7em;">th</i> tab</td>
+            <td class="shortcut">command + [1-9 arası sayı] / ctrl + [1-9 arası sayı]</td>
+            <td>n.<i style="font-size: .7em;"></i> sekmeye git</td>
           </tr>
         </table>
       </section>
