--- a/src/pages/crash.html
+++ b/src/pages/crash.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cargo - Crash</title>
+    <title>Kargo - Kaza</title>
     <style media="screen">
       body {
         margin: 0px;
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <h1>💣🚂🚋🚋<br> Cargo has crashed.</h1>
-    <p class="text">The website you visited likely used too many hardware resources.</p>
+    <h1>💣🚂🚋🚋<br> Kargo kaza yaptı.</h1>
+    <p class="text">Ziyaret ettiğiniz web sitesi muhtemelen çok fazla donanım kaynağı kullandı.</p>
   </body>
 </html>
