--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Cargo</title>
+    <title>Kargo</title>
     <style media="screen">
       body {
         margin: 0px;
@@ -13,8 +13,8 @@
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
       }
 
-      ::-moz-selection { background: yellow; }
-      ::selection { background: yellow; }
+      ::-moz-selection { background: #fcc41d; }
+      ::selection { background: #fcc41d; }
     </style>
     <link rel="stylesheet" href="./static/simplebar/simplebar.css">
     <script src="./static/simplebar/simplebar.js"></script>
