--- a/src/pages/error.html
+++ b/src/pages/error.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cargo - Error</title>
+    <title>Kargo - Hata</title>
     <style media="screen">
       body {
         margin: 0px;
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body>
-    <h1>🔥🚂🚋🚋<br> Cargo was unable to load this page.</h1>
-    <p class="text">You should check if the url is correct and if the website still exists.</p>
+    <h1>🔥🚂🚋🚋<br> Kargo bu sayfayı yükleyemedi.</h1>
+    <p class="text">URL'nin doğru olup olmadığını ve web sitesinin hala mevcut olup olmadığını kontrol etmelisiniz.</p>
   </body>
 </html>
